# wall-e-robot

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md  setup.py  test.py
3D_Models/: README.md  neck-round-top-right.stl  neck-top-linkage.stl  neck-wire-guide-left.stl  tread-pin-x140.stl  tread-plate-x70.stl  wheel-axle-notched-x6.stl  wheel-back-x4.stl  wheel-bracket-inner-right.stl  wheel-bracket-outer-left.stl  wheel-bracket-outer-right.stl  wheel-gear-driven-x2.stl  wheel-top-x8.stl
3D_print/: README.md  neck-round-top-left.stl  neck-top.stl  neck-wire-guide-right.stl  wheel-axle-back-x2.stl  wheel-axle-spacer-x8.stl  wheel-bracket-inner-left.stl  wheel-frame-addon-x2.stl  wheel-frame-left.stl  wheel-frame-right.stl  wheel-front-x4.stl  wheel-gear-motor-x2.stl
ECAPA-TDNN/: custom_dataset.py  ecapa.py  loss.py  main.py  train.py  turn.py
ESP32_Firmware/: CMakeLists.txt  sdkconfig
ESP32_Firmware/includes/ros_node/: ros_node.hpp
ESP32_Firmware/main/: CMakeLists.txt
ESP32_Firmware/src/ros_node/: ros_node.cpp
Hard_Ware/: README.md
Hard_Ware/includes/es7210/: CMakeLists.txt
Hard_Ware/main/: CMakeLists.txt  hello_world_main.c
Hardware_Design/: 1.0v.SchDoc  PCB1.PcbDoc  PCB_Project.PrjPcb  PCB_Project.PrjPcbStructure  PCB_Project_1.SCHLIB  USB-C-12PIN.SchLib  readme.md
ROS2_Packages/: README.md  build.sh  build_utils.sh  cartographer_setup.sh  map.txt
ROS2_Packages/Simulation/simulation_pkg/: CMakeLists.txt  package.xml
ROS2_Packages/Simulation/simulation_pkg/launch/: display.launch.py
ROS2_Packages/Simulation/simulation_pkg/urdf/: arm.urdf.xacro  robot.urdf
ROS2_Packages/config/: config.yaml  connfig.yaml  langchain.yaml
ROS2_Packages/json/: prompt.json
ROS2_Packages/launch/: bringup_all.launch.py  cognition.launch.py  expression.launch.py  motion.launch.py  navigation.launch.py  perception.launch.py
ROS2_Packages/src/cognition_layer/executor_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/cognition_layer/langchain_agent_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/cognition_layer/memory_manager_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/cognition_layer/scene_trigger_node/: package.xml
ROS2_Packages/src/cognition_layer/task_planner_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/custom_api/: CMakeLists.txt  package.xml
ROS2_Packages/src/custom_api/msg/: Agent.msg  TaskList.msg  TaskStep.msg
ROS2_Packages/src/custom_api/srv/: Agent.srv  audio_bytes.srv
ROS2_Packages/src/expression_layer/audio_play_client/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/expression_layer/chattts_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/motion_layer/esp32_comm_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/motion_layer/motion_controller_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/motion_layer/servo_controller_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/data_fuison/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/depth_msg_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/navigation_layer/lidar_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/nav2_bt_navigator/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/slam_toolbox_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/sllidar_node/: CMakeLists.txt  package.xml
ROS2_Packages/src/navigation_layer/sllidar_node/launch/: sllidar_launch.py  view_sllider_launch.py
ROS2_Packages/src/navigation_layer/sllidar_node/src/: sllidar_client.cpp  sllidar_node.cpp  sllider_client.cc
ROS2_Packages/src/perception_layer/camera_node/: CMakeLists.txt  package.xml  setup.py
ROS2_Packages/src/perception_layer/face_recognition_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/perception_layer/face_voice_id_node/: package.xml  setup.cfg  setup.py
ROS2_Packages/src/perception_layer/mic_audio_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2_Packages/src/perception_layer/mic_audio_node/src/: config_loader.h  mic_audio_node.cc
ROS2_Packages/src/perception_layer/stt_node/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ROS2_Packages/src/perception_layer/stt_node/src/: config_loader.h  stt_node.cc  vosk_speech_recognizer.h
ROS2_Packages/src/perception_layer/stt_node/stt_node/: stt_node.py
ROS2_Packages/src/utils/: CMakeLists.txt  Readme.md  package.xml  setup.py
ROS2_Packages/src/utils/msg/: AudioStream.msg
ROS2_Packages/src/utils/shared_utils/: audio_tools.py
ROS2_Packages/src/utils/shared_utils/include/shared_utils/: config_loader.h
ROS2_Packages/src/utils/shared_utils/python/: config_loader.py
ROS2_Packages/src/utils/shared_utils/python/shared_utils/: audio_helper.py  config.py  log.py  recongize.py
ROS2_Packages/src/utils/shared_utils/python/shared_utils/Face/: face_detect.py  face_feature.py  face_predict.py
ROS2_Packages/src/utils/shared_utils/python/shared_utils/embedding/: embedding_predict.py
ROS2_Packages/src/utils/srv/: PlayAudio.srv  ServoCommand.srv
STT/: README.md  real_stt.py
STT_Vosk/: CMakeLists.txt  README.md  config_loader.cc  config_loader.h  real_stt.py  thread_pool.cc  thread_pool.h  vosk_speech_recognizer.h
SpeakerRecognition/: setup.py
SpeakerRecognition/Face/: face_predict.py
SpeakerRecognition/classify/: speaker_predict.py  speaker_recognize.py
SpeakerRecognition/embedding/: embedding.py
TTS/: README.md  test.py
TTS_ChatTTS/: README.md  stream.py
Tools/: lib_build.py  libs.yaml  log.py  model.py  model_config.yaml  setuptool.sh
depth/: depth_numpy.py  run.py  test.py  yolo_detect.py
docs/: README_zh.md  architecture.md  langgraph_fsm.md
speaker_recognize/: config.py  log.py  main.py  recongize.py  setup.py
speaker_recognize/Face/: face_detect.py  face_feature.py  face_predict.py
speaker_recognize/classify/: speaker_predict.py  speaker_recognize.py
speaker_recognize/embedding/: embedding.py  embedding_predict.py
tests/: test1.cc
tts/: stream.py  test.py
utils/: config.yaml
(+34 files in other folders)
