<?xml version="1.0"?>
<package format="3">
  <name>utils</name>
  <version>0.1.0</version>
  <description>Shared utility functions, custom messages and services</description>

  <maintainer email="zzj@todo.todo">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <depend>yaml-cpp</depend>
  <depend>ament_index_cpp</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
